// Copyright 2019  The Cockroach Authors.

syntax = "proto3";
package znbase.sql.execpb;
option go_package = "execpb";

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

// VectorizedStats represents the stats collected from an operator.
message VectorizedStats {
  int32 id = 1 [(gogoproto.customname) = "ID"];
  int64 num_batches = 2;
  int64 num_tuples = 3;
  google.protobuf.Duration time = 4 [(gogoproto.nullable) = false,
                                  (gogoproto.stdduration) = true];
  // stall indicates whether stall time or execution time is being tracked.
  bool stall = 5;
}
